# szl-brand

./: .dco-negative-test.md  .dco-test.md  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
anatomy/: ANATOMY_BUILD_REPORT.md  README.md  anatomy_INDEX.md  figures.sha256
anatomy/scripts/: build_anatomy_blood_immune.py  build_anatomy_body_graph.py  build_anatomy_brain.py  build_anatomy_heart.py  build_anatomy_nervous.py  build_anatomy_skeleton.py  build_anatomy_wires.py  build_explainer_pdfs.py  rebuild_all.sh
assets/anatomy/: README.md
docs/: DESIGN_DIRECTION.md  anthropic_mythos_pod.md  anthropic_willakuy_pod.md  architecture_synthesis_tldr.md  glass_wing_pod.md  maki_chaki_limbs_proposal.md  rikchay_pod.md
docs/anatomy/: anatomy_memo.md
hololattice/: README.md  hololattice.js
kit/: CODEOWNERS  CODE_OF_CONDUCT.md  COMPONENT_TOKENS.md  CONTRIBUTING.md  README.md  SECURITY.md  TYPOGRAPHY.md  brand-bible.md
kit/.github/: CODEOWNERS
kit/fonts/: LICENSES.md
kit/logos/: LOGO_SUITE.md  LOGO_USAGE.md
kit/tokens/: COLOR_CONTRAST_REPORT.md  COLOR_TOKENS.css  COLOR_TOKENS.json  COLOR_TOKENS.scss  COLOR_TOKENS.tailwind.config.js  COMPONENT_TOKENS.css  szl-design-system.css
motion/: README.md  index.html
posts/: linkedin.md  medium.md  substack.md
social-previews/: gen.py
src/szl_brand/: cli.py  (+6 more)
tests/: test_cli.py  test_palette.py  test_preview.py  test_validate.py
(+9 files in other folders)
