[project]
name = "szl-brand"
version = "1.0.0"
description = "SZL Holdings Brand SDK — Deterministic asset generation, validation, and governance"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.12"
authors = [{name = "SZL Holdings"}]
keywords = ["brand", "assets", "generative", "deterministic", "governance"]

dependencies = [
    "Pillow>=10.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
szl-brand = "szl_brand.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/szl_brand"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["node_modules", ".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-length (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
